@@ -1,24 +1,39 @@
 <configure xmlns="http://namespaces.zope.org/zope"
-           xmlns:browser="http://namespaces.zope.org/browser"
-           xmlns:five="http://namespaces.zope.org/five">
+    xmlns:browser="http://namespaces.zope.org/browser"
+    xmlns:five="http://namespaces.zope.org/five">
 
     <include file="migrate.zcml" />
 
     <browser:page
-           for="*"
-	   name="fixTranslations"
-           class=".admin.LinguaPlone"
-           permission="cmf.ManagePortal"
-	   template="./www/fixTranslations.pt"
-         />
+        for="*"
+        name="fixTranslations"
+        class=".admin.LinguaPlone"
+        permission="cmf.ManagePortal"
+        template="./www/fixTranslations.pt"
+        />
 
     <browser:page
-           for="*"
-	   name="fixTidyText"
-           class=".admin.TidyContent"
-           permission="cmf.ManagePortal"
-	   template="./www/tidy.pt"
-         />
+        for="*"
+        name="fixTidyText"
+        class=".admin.TidyContent"
+        permission="cmf.ManagePortal"
+        template="./www/tidy.pt"
+        />
+Products.ResourceRegistries.tools.BaseRegistry.BaseRegistryTool
+
+    <browser:page
+        for="*"
+        name="regen_js"
+        class=".admin.RegenerateJS"
+        permission="cmf.ManagePortal"
+        />
+
+    <browser:page
+        for="*"
+        name="regen_css"
+        class=".admin.RegenerateCSS"
+        permission="cmf.ManagePortal"
+        />
 
     <adapter factory=".plone.ObjectTitle" />
 
