@@ -1,26 +1,4 @@
-from App.config import getConfiguration
-import os
-import logging
-
-logger = logging.getLogger('Products.EEAPloneAdmin')
-
+from Products.EEAPloneAdmin.browser.admin import save_resources_on_disk
 
 def handle_resourceregistry_change(obj, event):
-    conf = getConfiguration()
-    dest = conf.environment['saved_resources']
-    if not os.path.exists(dest):
-        os.mkdir(dest)
-    portal = obj.aq_parent
-    for name in obj.concatenatedresources:
-        try:
-            content = obj.getInlineResource(name, portal)
-        except:
-            logger.warning("Could not get content for resource %s" % name)
-            continue
-
-        try:
-            f = open(os.path.join(dest, name), "w+")
-            f.write(content)
-            f.close()
-        except IOError:
-            pass
+    save_resources_on_disk(obj)
